<resources>
    <string name="app_name">Uber Clone</string>
    <string name="sign_in_with_phone">Sign in with phone\n</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_text">Continue\n</string>
    <string name="phone_number">Phone number\n</string>
    <string name="last_name">Lastname</string>
    <string name="first_name">Firstname\n</string>
    <string name="register_text">Register</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_exit">Sing out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="decline">Decline</string>
    <string name="api_key">AIzaSyDSYQOpx5KWQilelGSNJdideUwj53VxAKI</string>
    <string name="token_not_found">Token not found</string>
    <string name="send_request_to_driver_faield">Send request to Rider failed\n</string>
</resources>